# instamatte

./: .gitignore  LICENSE  README.md  instamatte.py  pyproject.toml
instamatte/: __init__.py  __main__.py  cli.py  configuration.py  file_operations.py  image_processing.py
